--- a/style_me_classy.html
+++ b/style_me_classy.html
@@ -3,7 +3,8 @@
 
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="css/sheet1_2.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+     <link rel="stylesheet" type="text/css" href="css/sheet1.css">
     <title>foo title</title>
   </head>
 
