--- a/coolthings.html
+++ b/coolthings.html
@@ -3,15 +3,33 @@
 <head>
   <title>Cool Stuff~</title>
   <link rel="stylesheet" type="text/css" href="css/coolstyle.css">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 
 <body>
-<div id="draggable">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus dolor at massa maximus, eget efficitur magna pulvinar. Nullam sed lacus eget leo pulvinar hendrerit a sit amet orci. Nam bibendum urna nulla, in fermentum massa pharetra eleifend. Curabitur ultrices scelerisque ultricies. Morbi at vulputate quam. Proin bibendum erat vitae porttitor malesuada. Vivamus sagittis purus a nunc rhoncus, at imperdiet elit volutpat. Nullam mauris mauris, posuere vitae tincidunt eu, euismod id tortor. Etiam eget tellus malesuada ipsum euismod volutpat et ut metus. Ut sed nibh in libero mollis ornare. Donec eleifend, tortor eget ultricies sagittis, lectus elit finibus lectus, mollis consectetur tellus eros quis erat. Ut bibendum ornare velit.
-</div>
 
-<img id="colors-p" src="img/colors.png" height="300px" width="300px">
+  <marquee><h1>Here are a bunch of cool CSS elements</h1></marquee>
+  
+  <div id="dragging">
+    <h2>Here is an example of <b>resize</b></h2>
+    <div id="drag">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas cursus dolor at massa maximus, eget efficitur magna pulvinar. Nullam sed lacus eget leo pulvinar hendrerit a sit amet orci. Nam bibendum urna nulla, in fermentum massa pharetra eleifend. Curabitur ultrices scelerisque ultricies. Morbi at vulputate quam. Proin bibendum erat vitae porttitor malesuada. Vivamus sagittis purus a nunc rhoncus, at imperdiet elit volutpat. Nullam mauris mauris, posuere vitae tincidunt eu, euismod id tortor. Etiam eget tellus malesuada ipsum euismod volutpat et ut metus. Ut sed nibh in libero mollis ornare. Donec eleifend, tortor eget ultricies sagittis, lectus elit finibus lectus, mollis consectetur tellus eros quis erat. Ut bibendum ornare velit.
+    </div>
+  </div>
 
+
+   <div id="floating">
+     <h2>Here is an example of <b>float</b></h2>
+     <img src="img/colors.png" height="300px" width="300px">
+    <img id="float" src="img/ducky.jpg" width="300px" height="216.5px">
+  </div>
+  
+  <div id="clipping">
+    <h2>Here is an example of <b>clip</b></h2>
+    <img id="colors-p" src="img/colors.png" height="300px" width="300px">
+  </div>
+
+  
 </body>
 
 </html>
